<resources>
    <string name="app_name">Calculator</string>
    <string name="display_txt"></string>
    <string name="one_txt">1</string>
    <string name="two_txt">2</string>
    <string name="three_txt">3</string>
    <string name="four_txt">4</string>
    <string name="five_txt">5</string>
    <string name="six_txt">6</string>
    <string name="seven_txt">7</string>
    <string name="eight_txt">8</string>
    <string name="nine_txt">9</string>
    <string name="zero_txt">0</string>
    <string name="clear_txt">C</string>
    <string name="switch_txt">+/-</string>
    <string name="percent_txt">%</string>
    <string name="division_txt">/</string>
    <string name="multi_txt">*</string>
    <string name="sub_txt">-</string>
    <string name="add_txt">+</string>
    <string name="dot">.</string>
    <string name="equals_txt">=</string>
</resources>