<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/one_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onOperatorClick"
        android:text="@string/add_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/three_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="86dp"
        android:layout_height="74dp"
        android:height="75dp"
        android:onClick="onOperatorClick"
        android:text="@string/equals_txt"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="184dp"
        android:layout_height="73dp"
        android:height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/zero_txt"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="83dp"
        android:layout_height="74dp"
        android:height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnThree"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/two_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/four_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/six_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/five_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onOperatorClick"
        android:text="@string/sub_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="330dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        android:elegantTextHeight="false"
        android:text="@string/display_txt"
        android:textColor="#2196F3"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="14dp"
        android:onClick="onClearClick"
        android:text="@string/clear_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSwitch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_txt" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/seven_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onOperatorClick"
        android:text="@string/multi_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/nine_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnMulti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="onNumberClick"
        android:text="@string/eight_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnSwitch" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="14dp"
        android:onClick="onOperatorClick"
        android:text="@string/division_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/result_txt" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="14dp"
        android:onClick="onOperatorClick"
        android:text="@string/percent_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSwitch"
        app:layout_constraintTop_toBottomOf="@+id/result_txt" />

    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="14dp"
        android:onClick="onOperatorClick"
        android:text="@string/switch_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/result_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>